--- a/Produktkatalog.html
+++ b/Produktkatalog.html
@@ -77,7 +77,7 @@
 	<strong>Eigenschaften</strong></br></br>
 <ul><li><strong>Material: </strong> Edelstahl und Sterlingsilber</li>
 	<li><strong>Farben: </strong> silber</li>
-	<li><strong>Preis: </strong> 89,00 €/St&uumlck</li></ul>
+	<li><strong>Preis: </strong> 89,00 â‚¬/St&uumlck</li></ul>
 	</div>
 	</div>
 </div></br></br></br></br></br>
@@ -94,7 +94,7 @@
     <div>Diese Holzsonnenbrillen sind ein handgefertigtes Unikat mit individueller Farbnuance und einzigartiger Holzstruktur. Die Sonnenbrillen bestechen durch ihren zeitlosen Stil und gl&aumlnzten durch &Aumlsthetik, Tragekomfort und Langlebigkeit. Unsere Sonnenbrillen aus Holz werden mit einem Natur-Schutzlack &uumlberzogen und sind vor Schwei&szlig und Wasser gesch&uumltzt. Ein innovatives Federscharnier aus rostfreiem Edelstahl sorgt f&uumlr den perfekten Sitz Ihrer Holzbrille.
 	</br></br>
 	<strong>Eigenschaften</strong></br></br>
-<ul><li><strong>Preis: </strong>79,00 €/St&uumlck</li></ul>
+<ul><li><strong>Preis: </strong>79,00 â‚¬/St&uumlck</li></ul>
 	</div>
     </div>
 </div></br></br></br>
@@ -111,31 +111,31 @@
     <div>Diese Holzsonnenbrillen sind ein handgefertigtes Unikat mit individueller Farbnuance und einzigartiger Holzstruktur. Die Sonnenbrillen bestechen durch ihren zeitlosen Stil und gl&aumlnzten durch &Aumlsthetik, Tragekomfort und Langlebigkeit. Unsere Sonnenbrillen aus Holz werden mit einem Natur-Schutzlack &uumlberzogen und sind vor Schwei&szlig und Wasser gesch&uumltzt. Ein innovatives Federscharnier aus rostfreiem Edelstahl sorgt f&uumlr den perfekten Sitz Ihrer Holzbrille.
 	</br></br>
 	<strong>Eigenschaften</strong></br></br>
-<ul><li><strong>Preis: </strong>84,00 €/St&uumlck</li></ul>
+<ul><li><strong>Preis: </strong>84,00 â‚¬/St&uumlck</li></ul>
 	</div>
     </div>
 </div></br></br></br></br></br>
 
 <center>
-  <h2>pluvis® Kids</h2>
+  <h2>pluvisÂ® Kids</h2>
   <figure><img src="images/regenschirm1.png"/></figure></br>
     <a class="btn" href="#open-modal11">weiterlesen...</a></br>
  </center>
 <div id="open-modal11" class="modal-window">
   <div>
     <a href="#modal-close" title="Close" class="modal-close">Schlie&szligen</a>
-    <h1>pluvis® Kids</h1>
-    <div>Mit dem Regenschirm von pluvis® sind Sie nicht nur modisch, sondern auch sicher unterwegs. Unsere innovativen, beleuchtbaren Regenschirme sind der ideale Begleiter an verregneten Abenden. W&aumlhrend ein LED-Licht an der Schirmspitze (pluvis® toplight) f&uumlr Aufmerksamkeit sorgt, ist im Schirmstock eine LED-Taschenlampe integriert (pluvis® flash-light) und leuchtet gleichzeitig den Fu&szligweg aus. Dies schafft f&uumlr Fu&szligg&aumlnger jeder Altersklasse enorme Sicherheit bei Dunkelheit bzw. Regen und warnt herannahende Autofahrer aus allen Richtungen.
+    <h1>pluvisÂ® Kids</h1>
+    <div>Mit dem Regenschirm von pluvisÂ® sind Sie nicht nur modisch, sondern auch sicher unterwegs. Unsere innovativen, beleuchtbaren Regenschirme sind der ideale Begleiter an verregneten Abenden. W&aumlhrend ein LED-Licht an der Schirmspitze (pluvisÂ® toplight) f&uumlr Aufmerksamkeit sorgt, ist im Schirmstock eine LED-Taschenlampe integriert (pluvisÂ® flash-light) und leuchtet gleichzeitig den Fu&szligweg aus. Dies schafft f&uumlr Fu&szligg&aumlnger jeder Altersklasse enorme Sicherheit bei Dunkelheit bzw. Regen und warnt herannahende Autofahrer aus allen Richtungen.
 	</br></br>
 	<strong>Eigenschaften</strong></br></br>
 <ul><li><strong>Farben: </strong>schwarz, braun, weinrot, grau, dunkelgr&uumln, gelb, orange, rot, hellgr&uumln, blau</li>
-	<li><strong>Preis: </strong>399,00 €/10 St&uumlck</li></ul>
+	<li><strong>Preis: </strong>399,00 â‚¬/10 St&uumlck</li></ul>
 	</div>
     </div>
 </div></br></br></br>
 
 <center>
-  <h2>pluvis® Adult</h2>
+  <h2>pluvisÂ® Adult</h2>
   <figure><img src="images/regenschirm2.png"/></figure></br>
     <a class="btn" href="#open-modal12">weiterlesen...</a></br>
   </div>
@@ -143,12 +143,12 @@
 <div id="open-modal12" class="modal-window">
   <div>
     <a href="#modal-close" title="Close" class="modal-close">Schlie&szligen</a>
-    <h1>pluvis® Adult</h1>
-    <div>Mit dem Regenschirm von pluvis® sind Sie nicht nur modisch, sondern auch sicher unterwegs. Unsere innovativen, beleuchtbaren Regenschirme sind der ideale Begleiter an verregneten Abenden. W&aumlhrend ein LED-Licht an der Schirmspitze (pluvis® toplight) f&uumlr Aufmerksamkeit sorgt, ist im Schirmstock eine LED-Taschenlampe integriert (pluvis® flash-light) und leuchtet gleichzeitig den Fu&szligweg aus. Dies schafft f&uumlr Fu&szligg&aumlnger jeder Altersklasse enorme Sicherheit bei Dunkelheit bzw. Regen und warnt herannahende Autofahrer aus allen Richtungen.
+    <h1>pluvisÂ® Adult</h1>
+    <div>Mit dem Regenschirm von pluvisÂ® sind Sie nicht nur modisch, sondern auch sicher unterwegs. Unsere innovativen, beleuchtbaren Regenschirme sind der ideale Begleiter an verregneten Abenden. W&aumlhrend ein LED-Licht an der Schirmspitze (pluvisÂ® toplight) f&uumlr Aufmerksamkeit sorgt, ist im Schirmstock eine LED-Taschenlampe integriert (pluvisÂ® flash-light) und leuchtet gleichzeitig den Fu&szligweg aus. Dies schafft f&uumlr Fu&szligg&aumlnger jeder Altersklasse enorme Sicherheit bei Dunkelheit bzw. Regen und warnt herannahende Autofahrer aus allen Richtungen.
 	</br></br>
 	<strong>Eigenschaften</strong></br></br>
 <ul><li><strong>Farben: </strong>schwarz, braun, weinrot, grau, dunkelgr&uumln, gelb, orange, rot, hellgr&uumln, blau</li>
-	<li><strong>Preis: </strong>499,99 €/10 St&uumlck</li></ul>
+	<li><strong>Preis: </strong>499,99 â‚¬/10 St&uumlck</li></ul>
 	</div>
     </div>
 </div></br></br></br></br></br>
@@ -162,11 +162,11 @@
   <div>
     <a href="#modal-close" title="Close" class="modal-close">Schlie&szligen</a>
     <h1>glasello</h1>
-    <div>Sch&uumltzen Sie sich jetzt wirkungsvoll vor Viren, Keimen und Bakterien! Nicht nur in der Winterzeit ist unser Immunsystem anf&aumlllig f&uumlr Erk&aumlltungen und Krankheitserreger, auch in Restaurants und Cafés, in der Disco oder im Urlaub kann sauber erscheinendes Geschirr eine potenzielle Infektionsquelle sein. Jetzt gibt es den Ansteckungsschutz f&uumlr jedermann: Der „Glasello“ Desinfektions-Stick ist mit seinen rein pflanzlichen Inhaltsstoffen stark gegen Erk&aumlltungserreger und pathogene Keime – immer und &uumlberall! Desinfizieren Sie schnell und einfach Trinkgl&aumlser, Getr&aumlnkedosen und Essbesteck, indem Sie mit dem Stick daran entlangfahren. Der Ansteckungsschutz wirkt schon nach 20 Sekunden und Sie k&oumlnnen Speisen und Getr&aumlnke bedenkenlos genie&szligen. Durch sein kompaktes Format passt der „Glasello“ Desinfektions-Stick in jede Handtasche – f&uumlr mobilen Schutz im Handumdrehen!
+    <div>Sch&uumltzen Sie sich jetzt wirkungsvoll vor Viren, Keimen und Bakterien! Nicht nur in der Winterzeit ist unser Immunsystem anf&aumlllig f&uumlr Erk&aumlltungen und Krankheitserreger, auch in Restaurants und CafÃ©s, in der Disco oder im Urlaub kann sauber erscheinendes Geschirr eine potenzielle Infektionsquelle sein. Jetzt gibt es den Ansteckungsschutz f&uumlr jedermann: Der â€žGlaselloâ€œ Desinfektions-Stick ist mit seinen rein pflanzlichen Inhaltsstoffen stark gegen Erk&aumlltungserreger und pathogene Keime â€“ immer und &uumlberall! Desinfizieren Sie schnell und einfach Trinkgl&aumlser, Getr&aumlnkedosen und Essbesteck, indem Sie mit dem Stick daran entlangfahren. Der Ansteckungsschutz wirkt schon nach 20 Sekunden und Sie k&oumlnnen Speisen und Getr&aumlnke bedenkenlos genie&szligen. Durch sein kompaktes Format passt der â€žGlaselloâ€œ Desinfektions-Stick in jede Handtasche â€“ f&uumlr mobilen Schutz im Handumdrehen!
 	</br></br>
 	<strong>Eigenschaften</strong></br></br>
 <ul><li><strong>Farben: </strong>lila, orange, gr&uumln, rot</li>
-	<li><strong>Preis: </strong>9,99 €/4 St&uumlck</li></ul>
+	<li><strong>Preis: </strong>9,99 â‚¬/4 St&uumlck</li></ul>
 	</div>
     </div>
 </div></br></br></br></br></br>
@@ -184,7 +184,7 @@
 	</br></br>
 	<strong>Eigenschaften</strong></br></br>
 <ul><li><strong>Farben: </strong>silber</li>
-	<li><strong>Preis: </strong>499,00 €/50St&uumlck</li></ul>
+	<li><strong>Preis: </strong>499,00 â‚¬/50St&uumlck</li></ul>
 	</div>
     </div>
 </div></br></br></br>
@@ -204,7 +204,7 @@
 <ul><li><strong>Gewicht</strong>157g</li>
 	<li><strong>Volumen</strong>ca. 100 Liter</li> 
 	<li><strong>Farben: </strong>blau</li>
-	<li><strong>Preis: </strong>199,00 €/10 St&uumlck</li></ul>
+	<li><strong>Preis: </strong>199,00 â‚¬/10 St&uumlck</li></ul>
 	</div>
     </div>
 </div></br></br></br>
@@ -222,7 +222,7 @@
 	</br></br>
 	<strong>Eigenschaften</strong></br></br>
 <ul><li><strong>Farben: </strong>schwarz, braun, weinrot, grau, dunkelgr&uumln, gelb, orange, rot, hellgr&uumln, blau</li>
-	<li><strong>Preis: </strong>14,99 €/St&uumlck</li></ul>
+	<li><strong>Preis: </strong>14,99 â‚¬/St&uumlck</li></ul>
 	</div>
     </div>
 </div></br></br></br>
@@ -236,11 +236,11 @@
   <div>
     <a href="#modal-close" title="Close" class="modal-close">Schlie&szligen</a>
     <h1>Towell - Das Sporthandtuch</h1>
-    <div>Eine „Kapuze“ zum Einh&aumlngen, verhindert, dass das Handtuch von der Trainingsbank rutscht. Zwei klar unterscheidbare Seiten: Eine rutschfeste Hygiene-Seite f&uumlrs Ger&aumlt, die weiche Seite f&uumlr den K&oumlrper. Integrierte Tasche f&uumlr Schl&uumlssel, Handy oder Mitgliedskarte. Magnetverschluss zum einfachen Befestigen an Trainingsger&aumlten.
+    <div>Eine â€žKapuzeâ€œ zum Einh&aumlngen, verhindert, dass das Handtuch von der Trainingsbank rutscht. Zwei klar unterscheidbare Seiten: Eine rutschfeste Hygiene-Seite f&uumlrs Ger&aumlt, die weiche Seite f&uumlr den K&oumlrper. Integrierte Tasche f&uumlr Schl&uumlssel, Handy oder Mitgliedskarte. Magnetverschluss zum einfachen Befestigen an Trainingsger&aumlten.
 	</br></br>
 	<strong>Eigenschaften</strong></br></br>
 <ul><li><strong>Farben: </strong>rot</li>
-	<li><strong>Preis: </strong>199,00 €/10 St&uumlck</li></ul>
+	<li><strong>Preis: </strong>199,00 â‚¬/10 St&uumlck</li></ul>
 	</div>
     </div>
 </div></br></br></br>
@@ -259,7 +259,7 @@
 	</br></br>
 	<strong>Eigenschaften</strong></br></br>
 <ul><li><strong>Farben: </strong>Farbverlauf von lila in blau</li>
-	<li><strong>Preis: </strong>199,00 €/10 St&uumlck</li></ul>
+	<li><strong>Preis: </strong>199,00 â‚¬/10 St&uumlck</li></ul>
 	</div>
     </div>
 </div></br></br></br>
@@ -278,7 +278,7 @@
 	</br></br>
 	<strong>Eigenschaften</strong></br></br>
 <ul><li><strong>Farben: </strong>blau, pink, grau</li>
-	<li><strong>Preis: </strong>je nach Set zwischen € 9,99 und €29,99</li></ul>
+	<li><strong>Preis: </strong>je nach Set zwischen â‚¬ 9,99 und â‚¬29,99</li></ul>
 	</div>
     </div>
 </div></br></br></br>
@@ -296,7 +296,7 @@
 	</br></br>
 	<strong>Eigenschaften</strong></br></br>
 <ul><li><strong>Farben: </strong>schwarz</li>
-	<li><strong>Preis: </strong>159,99 €/St&uumlck</li></ul>
+	<li><strong>Preis: </strong>159,99 â‚¬/St&uumlck</li></ul>
 	</div>
     </div>
 </div></br></br></br>
@@ -319,14 +319,14 @@
 <ul><li><strong>Material: </strong>Metall</li>
 	<li><strong>Farben: </strong>schwarz, silber</li>
 	<li><strong>Ma&szlige: </strong>140x10 mm</li>
-	<li><strong>Preis: </strong>199,00 €/500 St&uumlck bzw. 349,00 €/1000 St&uumlck</li></ul>
+	<li><strong>Preis: </strong>199,00 â‚¬/500 St&uumlck bzw. 349,00 â‚¬/1000 St&uumlck</li></ul>
 	</div>
 	</div>
 </div></br></br></br>
 
 <center>        
    <h2>Metall Flaschen&oumlffner</h2>
-  <figure><img src="images/schlüsselanhänger1.png" /></figure>
+  <figure><img src="images/schlÃ¼sselanhÃ¤nger1.png" /></figure>
     <a class="btn" href="#open-modal1">weiterlesen...</a></br>
  </center>
 <div id="open-modal1" class="modal-window">
@@ -336,7 +336,7 @@
     <div>Ein Flaschen&oumlffner als Schl&uumlsselanh&aumlnger. Einfach und gut. Ihre Werbung wird mittels Lasergravur auf dem Flaschen&oumlffner angebracht.</br></br>
 	<strong>Eigenschaften</strong></br></br>
 <ul><li><strong>Farben: </strong>rot</li>
-	<li><strong>Preis: </strong>199,00 €/100 St&uumlck</li></ul>
+	<li><strong>Preis: </strong>199,00 â‚¬/100 St&uumlck</li></ul>
 	</div>
     </div>
 </div></br></br></br>
@@ -344,9 +344,9 @@
 <center>		
 <div class="container">
   <div class="interior">
-   <a name="schlüsselanhänger2"></a>
+   <a name="schlÃ¼sselanhÃ¤nger2"></a>
    <h2>LED Taschenlampe Starlight LED</h2>
-  <figure><img src="images/schlüsselanhänger2.png" /></figure>
+  <figure><img src="images/schlÃ¼sselanhÃ¤nger2.png" /></figure>
     <a class="btn" href="#open-modal2">weiterlesen...</a></br>
   </div>
 </div></center>
@@ -358,7 +358,7 @@
 </br></br>
 	<strong>Eigenschaften</strong></br></br>
 <ul><li><strong>Farbe: </strong>silber</li>
-	<li><strong>Preis: </strong>279,00 €/100 St&uumlck</li></ul>
+	<li><strong>Preis: </strong>279,00 â‚¬/100 St&uumlck</li></ul>
 	</div>
 	</div>
 </div></br></br></br>
@@ -367,9 +367,9 @@
 <center> 
 <div class="container">
   <div class="interior">
-   <a name="schlüsselanhänger3"></a>
+   <a name="schlÃ¼sselanhÃ¤nger3"></a>
    <h2>Schl&uumlsselanh&aumlnger "piep"</h2>
-  <figure><img src="images/schlüsselanhänger3.png" /></figure>
+  <figure><img src="images/schlÃ¼sselanhÃ¤nger3.png" /></figure>
     <a class="btn" href="#open-modal3">weiterlesen...</a></br>
   </div>
 </div></center>
@@ -377,11 +377,11 @@
   <div>
     <a href="#modal-close" title="Close" class="modal-close">Schlie&szligen</a>
     <h1>Schl&uumlsselanh&aumlnger "piep"</h1>
-    <div>Piepst und blinkt, wenn man ihn «anruft» und erm&oumlglicht somit das leichtere Wiederfinden des Schl&uumlssels.
+    <div>Piepst und blinkt, wenn man ihn Â«anruftÂ» und erm&oumlglicht somit das leichtere Wiederfinden des Schl&uumlssels.
 	</br></br>
 	<strong>Eigenschaften</strong></br></br>
 <ul><li><strong>Farbe: </strong>silber</li>
-	<li><strong>Preis: </strong>390,00 €/100 St&uumlck</li></ul>
+	<li><strong>Preis: </strong>390,00 â‚¬/100 St&uumlck</li></ul>
 	</div>
     </div>
 </div></br></br></br></br></br>
@@ -390,11 +390,11 @@
 <center>		
 <div class="container">
   <div class="interior">
-   <a name="brieföffner"></a>
+   <a name="briefÃ¶ffner"></a>
    <h1>Brief&oumlffner</h1>
-   <a name="brieföffner1"></a>
+   <a name="briefÃ¶ffner1"></a>
    <h2>Brief&oumlffner "Ping"</h2>
-  <figure><img src="images/brieföffner1.png" /></figure></br>
+  <figure><img src="images/briefÃ¶ffner1.png" /></figure></br>
     <a class="btn" href="#open-modal4">weiterlesen...</a></br>
   </div>
 </div></center>
@@ -409,7 +409,7 @@
 	<li><strong>Farbe: </strong>silber</li>
 	<li><strong>Ma&szlige: </strong>163x30x5mm</li>
 	<li><strong>Logoma&szlige: </strong>30x20mm</li>
-	<li><strong>Preis: </strong>180,00 €/50 St&uumlck bzw. 330,00/100 St&uumlck</li></ul>
+	<li><strong>Preis: </strong>180,00 â‚¬/50 St&uumlck bzw. 330,00/100 St&uumlck</li></ul>
 	</div>
     </div>
 </div></br></br></br></br></br>
@@ -417,7 +417,7 @@
 <center>
 <div class="container">
   <div class="interior">
-   <a name="notizbücher"></a>
+   <a name="notizbÃ¼cher"></a>
    <h1>Notizb&uumlcher</h1>
    <a name="notizbuch1"></a>
    <h2>DIN A5 Notizbuch</h2>
@@ -429,13 +429,13 @@
   <div>
     <a href="#modal-close" title="Close" class="modal-close">Schlie&szligen</a>
     <h1>DIN A5 Notizbuch</h1>
-    <div>A5 Notizbuch mit geometrischem Soft Touch Muster Design inkl. 80 Blatt (80 g/m²) liniert, Leseband, elastischem Verschluss und Stiftschlaufe.
+    <div>A5 Notizbuch mit geometrischem Soft Touch Muster Design inkl. 80 Blatt (80 g/mÂ²) liniert, Leseband, elastischem Verschluss und Stiftschlaufe.
 	</br></br>
 	<strong>Eigenschaften</strong></br></br>
 <ul><li><strong>Material: </strong>Thermo PU Lederimitat</li>
 	<li><strong>Ma&slige: </strong>21,5x14,2x1,5cm</li>
 	<li><strong>Position der Werbeanbringung: </strong>Vorderseite</li>
-	<li><strong>Preis: </strong>299,00 €/St&uumlck bzw. 579,00/100 St&uumlck</li></ul>
+	<li><strong>Preis: </strong>299,00 â‚¬/St&uumlck bzw. 579,00/100 St&uumlck</li></ul>
 	</div>
     </div>
 </div></br></br></br></br></br>
@@ -455,13 +455,13 @@
   <div>
     <a href="#modal-close" title="Close" class="modal-close">Schlie&szligen</a>
     <h1>DIN A4 Schreibmappe</h1>
-    <div>A4 Schreibmappe aus schwarzem Kunstleder inkl. Schreibblock mit 50 Bl&aumlttern (50 g/m²) und Gunmetal Gravurplatte.
+    <div>A4 Schreibmappe aus schwarzem Kunstleder inkl. Schreibblock mit 50 Bl&aumlttern (50 g/mÂ²) und Gunmetal Gravurplatte.
 	</br></br>
 	<strong>Eigenschaften</strong></br></br>
 <ul><li><strong>Material: </strong>Thermo PU Lederimitat</li>
 	<li><strong>Ma&szlige: </strong>317x250x18mm</li>
 	<li><strong>Logoma&szlige: </strong>95x12mm</li>
-	<li><strong>Preis: </strong>799,00 €/50 St&uumlck bzw. 1.549,00/100 St&uumlck</li></ul>
+	<li><strong>Preis: </strong>799,00 â‚¬/50 St&uumlck bzw. 1.549,00/100 St&uumlck</li></ul>
 	</div>
     </div>
 </div></br></br></br></br></br>
