--- a/Sotickenwir.html
+++ b/Sotickenwir.html
@@ -59,7 +59,7 @@
 		<p>Der Erfolg unserer Kunden ist uns sehr wichtig und ein einpr&aumlgsamer Werbeslogan sowie ein sehenswertes Logo sind ein Muss f&uumlr ein erfolgreiches Unternehmen.</p></br></br>
 
 		<h1>Jeder Auftrag wird in Perfektion ausgef&uumlhrt!</h1>
-		<p>Jeder unserer Kunden erh&aumllt vollste Leistung eines ganzen Kreativ-Teams um beste Ergebnisse zu erzielen. Nur wenn ein Konzept auch wirklich als Perfekt angesehen wird sind wir zufrieden.</p></br></br>
+		<p>Jeder unserer Kunden erh&aumlt vollste Leistung eines ganzen Kreativ-Teams um beste Ergebnisse zu erzielen. Nur wenn ein Konzept auch wirklich als Perfekt angesehen wird sind wir zufrieden.</p></br></br>
 
 		<h1>Wir erg&aumlnzen uns!</h1>
 		<p>Wir sch&aumltzen und akzeptieren die St&aumlrken und Schw&aumlchen unserer Kunden und Kollegen und sch&oumlpfen Kraft daraus, um bestm&oumlgliche Ergebnisse liefern zu k&oumlnnen.</center></p></br></br>
