--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 	</br>
 	<center>	   
 	<h1>Neuigkeiten</h1></br>
-	<h2>KIMIA ist derzeit noch in der Entwicklungsphase.</h2>
-	<p>Zurzeit werden noch alle Vorkehrungen getroffen, damit wir voraussichtlich im September 2018 erfolgreich als Jungunternehmen starten k&oumlnnen. Bis dahin wird alles von unserem Team noch genaustens geplant und vorbereitet.
+	<h2>Unser Online-Shop ist endlich fertig.</h2>
+	<p>Alle unsere innovativen Artikel können Sie ab jetzt auch in unserem Webshop finden! Wir freuen uns auf Ihre Bestellungen!
 	</br>F&uumlr einen Einblick in das Team, das hinter KIMIA steckt, klicken Sie <a href="UnserTeam.html">hier.</a></p></br></br></br></br>
 	<h1>Aktuelle Angebote</h1></br>
 	
