--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 	<center>	   
 	<h1>Neuigkeiten</h1></br>
 	<h2>Unser Online-Shop ist endlich fertig.</h2>
-	<p>Alle unsere innovativen Artikel können Sie ab jetzt auch in unserem Webshop finden! Wir freuen uns auf Ihre Bestellungen!
+	<p>Alle unsere innovativen Artikel k&oumlnnen Sie ab jetzt auch in unserem Webshop finden! Wir freuen uns auf Ihre Bestellungen!
 	</br>F&uumlr einen Einblick in das Team, das hinter KIMIA steckt, klicken Sie <a href="UnserTeam.html">hier.</a></p></br></br></br></br>
 	<h1>Aktuelle Angebote</h1></br>
 	
