--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
 	
 	<h2> Auch f&uumlr den Valtentinstag haben wir ein besonderes Angebot f&uumlr Sie! G&uumlltig bis 14. 02.2019!</h2>
 	
-	<img src="Aktionen/Valentinstagsaktion.jpg" width="100%" height="100%"/></br></br>
+	<img <!-- hier den Speicherpfad des Bildes eingeben --> src=width="100%" height="100%"/></br></br>
 	<p>
-	</br>F&uumlr mehr Informationen klicken Sie bitte <a href="Produktkatalog/#open-modal0"> hier</a></p></br></br>
+	</br><!-- Fuumlr mehr Informationen klicken Sie bitte <a href="Produktkatalog/#open-modal0"> hier---></a></p></br></br>
 	
 	
 	
