--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
 	</br>F&uumlr einen Einblick in das Team, das hinter KIMIA steckt, klicken Sie <a href="UnserTeam.html">hier.</a></p></br></br></br></br>
 	<h1>Aktuelle Angebote</h1></br>
 	
-	<h2> Auch f&uumlr den Valtentinstag haben wir ein besonderes Angebot f&uumlr Sie! G&uumlltig bis 14. 02.2019!</h2>
+	<h2> Dereit sind leider keine Angebote vorhanden</h2>
 	
-	<img <!-- hier den Speicherpfad des Bildes eingeben --> src=width="100%" height="100%"/></br></br>
+	<img <!-- hier den Speicherpfad des Bildes eingeben --> <!--src=width="100%" height="100%"/> --></br></br>
 	<p>
 	</br><!-- Fuumlr mehr Informationen klicken Sie bitte <a href="Produktkatalog/#open-modal0"> hier---></a></p></br></br>
 	
