--- a/Sotickenwir.html
+++ b/Sotickenwir.html
@@ -32,9 +32,7 @@
 		  <li><a href="index.html">Home</a></li>
 		  <li><a href="Ueberuns.html">&Uumlber uns</a></li>
           <li><a href="Sotickenwir.html">So ticken wir</a></li>
-          <li><a href="Produktkatalog.html">Produktkatalog</a></li>
 		  <li><a href="UnserTeam.html">Unser Team</a></li>
-		  <li><a href="https://shops.act.at/10001561/desktop/de/shop/innovationen/">Online Shop</a></li>
           </ul>
       </div>
     </div>
@@ -59,7 +57,7 @@
 		<p>Der Erfolg unserer Kunden ist uns sehr wichtig und ein einpr&aumlgsamer Werbeslogan sowie ein sehenswertes Logo sind ein Muss f&uumlr ein erfolgreiches Unternehmen.</p></br></br>
 
 		<h1>Jeder Auftrag wird in Perfektion ausgef&uumlhrt!</h1>
-		<p>Jeder unserer Kunden erh&aumlt vollste Leistung eines ganzen Kreativ-Teams um beste Ergebnisse zu erzielen. Nur wenn ein Konzept auch wirklich als Perfekt angesehen wird sind wir zufrieden.</p></br></br>
+		<p>Jeder unserer Kunden erh&aumllt vollste Leistung eines ganzen Kreativ-Teams um beste Ergebnisse zu erzielen. Nur wenn ein Konzept auch wirklich als Perfekt angesehen wird sind wir zufrieden.</p></br></br>
 
 		<h1>Wir erg&aumlnzen uns!</h1>
 		<p>Wir sch&aumltzen und akzeptieren die St&aumlrken und Schw&aumlchen unserer Kunden und Kollegen und sch&oumlpfen Kraft daraus, um bestm&oumlgliche Ergebnisse liefern zu k&oumlnnen.</center></p></br></br>
@@ -68,7 +66,7 @@
 	</div>
     <div id="content_footer"></div>
     <div id="footer">
-<p><a href="index.html">Home</a> | <a href="Ueberuns.html">&Uumlber uns</a> | <a href="Sotickenwir.html">So ticken wir</a> | <a href="Produktkatalog.html">Produktkatalog</a> | <a href="UnserTeam.html">Unser Team</a> | <a href="https://shops.act.at/10001561/desktop/de/shop/innovationen/">Online Shop</a> | <a href="impressum.html">Impressum</a>  |  <a href="AGB's.html">AGB's</a></p>
+<p><a href="index.html">Home</a> | <a href="Ueberuns.html">&Uumlber uns</a> | <a href="Sotickenwir.html">So ticken wir</a> | <a href="UnserTeam.html">Unser Team</a> | <a href="impressum.html">Impressum</a>  |  <a href="AGB's.html">AGB's</a></p>
 	</div>
   </div>
 </body>
