--- a/UnserTeam.html
+++ b/UnserTeam.html
@@ -33,9 +33,7 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="Ueberuns.html">&Uumlber uns</a></li>
           <li><a href="Sotickenwir.html">So ticken wir</a></li>
-          <li><a href="Produktkatalog.html">Produktkatalog</a></li>
 		  <li><a href="UnserTeam.html">Unser Team</a></li>
-		  <li><a href="https://shops.act.at/10001561/desktop/de/shop/innovationen/">Online Shop</a></li>
          </ul>
       </div>
     </div>
@@ -224,8 +222,8 @@
 		<th width="200" align="center"></th>
 	</tr></table>
 	<table><tr>
-		<td style="text-align:center" width="200" align="center"><figure><img src="images/Turk_Martina.jpg" width="200" height="300"/></figure></td>
 		<td style="text-align:center" width="200" align="center"><figure><img src="images/Hechl_Coleen.jpg" width="200" height="300"/></figure></td>
+		<td style="text-align:center" width="200" align="center"><figure><img src="images/Turk_Martina.jpg" width="200" height="300"/></figure></td>
 	</tr>
 	<tr>
 		<td width="200" align="center"><div align="center" class="container">
@@ -257,7 +255,7 @@
     </div></div>
     <div id="content_footer"></div>
     <div id="footer">
-	<p><a href="index.html">Home</a> | <a href="Ueberuns.html">&Uumlber uns</a> | <a href="Sotickenwir.html">So ticken wir</a> | <a href="Produktkatalog.html">Produktkatalog</a> | <a href="UnserTeam.html">Unser Team</a> | <a href="https://shops.act.at/10001561/desktop/de/shop/innovationen/">Online Shop</a> | <a href="impressum.html">Impressum</a>  |  <a href="AGB's.html">AGB's</a></p>
+	<p><a href="index.html">Home</a> | <a href="Ueberuns.html">&Uumlber uns</a> | <a href="Sotickenwir.html">So ticken wir</a> | <a href="UnserTeam.html">Unser Team</a> | <a href="impressum.html">Impressum</a>  |  <a href="AGB's.html">AGB's</a></p>
 	</div>
   </div>
 </body>
