--- a/Ueberuns.html
+++ b/Ueberuns.html
@@ -33,9 +33,7 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="Ueberuns.html">&Uumlber uns</a></li>
           <li><a href="Sotickenwir.html">So ticken wir</a></li>
-          <li><a href="Produktkatalog.html">Produktkatalog</a></li>
 		  <li><a href="UnserTeam.html">Unser Team</a></li>
-		  <li><a href="https://shops.act.at/10001561/desktop/de/shop/innovationen/">Online Shop</a></li>
          </ul>
       </div>
     </div>
@@ -74,7 +72,7 @@
 </div>
 <div id="content_footer"></div>
     <div id="footer">
-<p><a href="index.html">Home</a> | <a href="Ueberuns.html">&Uumlber uns</a> | <a href="Sotickenwir.html">So ticken wir</a> | <a href="Produktkatalog.html">Produktkatalog</a> | <a href="UnserTeam.html">Unser Team</a> | <a href="https://shops.act.at/10001561/desktop/de/shop/innovationen/">Online Shop</a> | <a href="impressum.html">Impressum</a>  |  <a href="AGB's.html">AGB's</a></p>
+<p><a href="index.html">Home</a> | <a href="Ueberuns.html">&Uumlber uns</a> | <a href="Sotickenwir.html">So ticken wir</a> | <a href="UnserTeam.html">Unser Team</a> | <a href="impressum.html">Impressum</a>  |  <a href="AGB's.html">AGB's</a></p>
 	</div>
   </div>
 </body>
