--- a/index.html
+++ b/index.html
@@ -51,27 +51,16 @@
 	</br>
 	<center>	   
 	<h1>Neuigkeiten</h1></br>
-	<h2>KIMIA ist derzeit noch in der Entwicklungsphase.</h2>
-	<p>Zurzeit werden noch alle Vorkehrungen getroffen, damit wir voraussichtlich im September 2018 erfolgreich als Jungunternehmen starten k&oumlnnen. Bis dahin wird alles von unserem Team noch genaustens geplant und vorbereitet.
+	<h2>Unser Online-Shop ist endlich fertig.</h2>
+	<p>Alle unsere innovativen Artikel k&oumlnnen Sie ab jetzt auch in unserem Webshop finden! Wir freuen uns auf Ihre Bestellungen!
 	</br>F&uumlr einen Einblick in das Team, das hinter KIMIA steckt, klicken Sie <a href="UnserTeam.html">hier.</a></p></br></br></br></br>
 	<h1>Aktuelle Angebote</h1></br>
 	
-	<h2>Aktion 1 f&uumlr den Tag der offenen T&uumlr der BHAK/BHAS Liezen g&uumlltig von 23.11.2018 bis 24.11.2018</h2>
+	<h2> Derzeit haben wir leider keine Aktionen für Sie!</h2>
 	
-	<img src="Aktionen/Tag der offenen Tur Aktion Pokito.png" width="100%" height="100%"/></br></br>
-	<p>Da im Zeitraum vom 23.11.2018 bis zum 24.11.2018 der Tag der offenen T&uumlr in der BHAK/BHAS Liezen ist, bieten wir Ihen den inovatieven Becher namens Pokito an. 10 St&uumlck kosten nur &#8364 144,99 anstatt &#8364 149,99, wobei Sie &#8364 5,00 sparen.
-	</br></br>F&uumlr weitere Informationen zum Produkt klicken Sie <a href="produktkatalog.html#pokito">hier.</a></p></br></br>
 	
-	<h2>Aktion 2 f&uumlr den Tag der offenen T&uumlr der BHAK/BHAS Liezen g&uumlltig von 23.11.2018 bis 24.11.2018</h2>
-	<img src="Aktionen/Tag der offenen Tur Aktion Regenschirme.png" width="100%" height="100%"/></br></br>
-	<p>Da im Zeitraum vom 23.11.2018 bis zum 24.11.2018 der Tag der offenen T&uumlr in der BHAK/BHAS Liezen ist, bieten wir Ihen die sehr speziellen Regenschirme names pluvis an. 10 St&uumlck kosten nur &#8364 469,99 anstatt &#8364 489,99, wobei Sie &#8364 20,00 sparen.
-	</br></br>F&uumlr weitere Informationen zum Produkt klicken Sie <a href="produktkatalog.html#pokito">hier.</a></p></br></br>
 	
-	<h2>Er&oumlffnungsaktion g&uumlltig vom 08.11.2018 bis 29.11.2018</h2>
-	<img src="Aktionen/Aktion 1 08.11.2018 bis 29.11.2018.png" width="100%" height="100%"/></br></br>
-	<p>In Zeitraum vom 08.11.2018 bis zum 29.11.2018, bieten wir Ihen den inovatieven Becher namens Pokito an. 50 St&uumlck kosten nur &#8364 699,99 anstatt &#8364 749,50, wobei Sie &#8364 49,51 sparen.
-	</br></br>F&uumlr weitere Informationen zum Produkt klicken Sie <a href="produktkatalog.html#pokito">hier.</a></p>
-	</br></br>
+	
 	
 	</br></br>
 	</br></br></br>
