--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 	</br>F&uumlr einen Einblick in das Team, das hinter KIMIA steckt, klicken Sie <a href="UnserTeam.html">hier.</a></p></br></br></br></br>
 	<h1>Aktuelle Angebote</h1></br>
 	
-	<h2> Derzeit haben wir leider keine Aktionen für Sie!</h2>
+	<h2> Derzeit haben wir leider keine Aktionen f&uumlr Sie!</h2>
 	
 	
 	
