--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
 <!-- put class="selected" in the li tag for the selected page - to highlight which page you're on -->
 
 
-          <center><li><a href="index.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="Ueberuns.html">&Uumlber uns</a></li>
           <li><a href="Sotickenwir.html">So ticken wir</a></li>
-	  <li><a href="UnserTeam.html">Unser Team</a></li></center>
+	  <li><a href="UnserTeam.html">Unser Team</a></li>
          </ul>
       </div>
     </div>
